crates/normalize-cfg/tests/snapshots/typescript_cfg__typescript_branch.snap
---
source: crates/normalize-cfg/tests/typescript_cfg.rs
expression: mermaid
---
flowchart TD
    b0{"Branch<br/>lines 1-2"}
    b1(["exit"])
    b2["Statement<br/>lines 2-4"]
    b3["Statement<br/>lines 6-7"]
    b4["Statement<br/>lines 4-6"]

    b0 -->|"true"| b2
    b0 -->|"false"| b4
    b2 --> b3
    b4 --> b3
    b3 --> b1
