crates/normalize-cfg/tests/snapshots/typescript_cfg__typescript_linear.snap
---
source: crates/normalize-cfg/tests/typescript_cfg.rs
expression: mermaid
---
flowchart TD
    b0(["entry"])
    b1(["exit"])

    b0 -->|"return"| b1
