crates/normalize-cfg/tests/snapshots/typescript_cfg__typescript_loop.snap
---
source: crates/normalize-cfg/tests/typescript_cfg.rs
expression: mermaid
---
flowchart TD
    b0(["entry"])
    b1(["exit"])
    b2{"LoopHead<br/>line 3"}
    b3["LoopExit<br/>lines 8-9"]
    b4["LoopBody<br/>lines 3-8"]

    b0 --> b2
    b2 -->|"true"| b4
    b2 -->|"false"| b3
    b4 -->|"back"| b2
    b3 -->|"return"| b1
