crates/normalize-cfg/tests/snapshots/typescript_cfg__typescript_switch.snap
---
source: crates/normalize-cfg/tests/typescript_cfg.rs
expression: mermaid
---
flowchart TD
    b0{"Branch<br/>lines 1-2"}
    b1(["exit"])
    b2["Statement<br/>lines 9-10"]
    b3["Statement<br/>lines 3-4"]

    b0 -->|"true"| b3
    b3 --> b2
    b2 --> b1
