crates/normalize-cfg/tests/snapshots/typescript_cfg__typescript_try_catch.snap
---
source: crates/normalize-cfg/tests/typescript_cfg.rs
expression: mermaid
---
flowchart TD
    b0["Statement<br/>lines 1-2"]
    b1(["exit"])
    b2["Statement<br/>lines 11-12"]
    b3["Statement<br/>lines 2-7"]

    b0 --> b3
    b3 --> b2
    b2 --> b1
